# ouster-ros

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  index.rst  nodelets_os.xml  ouster_ros_nodelets.xml  package.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeql-analyze.yaml  docker-image.yml
config/: viz.rviz
docs/: class-diagram.md  index.rst  migration-guide.rst
include/ouster_ros/: color_point.h  common_point_types.h  lidar_scan_to_point_cloud.h  os_client_base_nodelet.h  os_point.h  os_ros.h  os_sensor_nodelet_base.h  sensor_point_types.h
include/ouster_ros/impl/: file_util.h
launch/: common.launch  driver.launch  record.launch  replay.launch  replay_pcap.launch  sensor.launch  sensor_foc_front.launch  sensor_mtp.launch  sensor_mtp_main.launch  sensor_mtp_slave.launch
msg/: ChannelField.msg  LidarInfo.msg  LidarScan.msg  Telemetry.msg
ouster-msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ouster-ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
ouster-ros/config/: community_driver.rviz  community_driver_config.yaml  driver_params.yaml  legacy_params.yaml  metadata-qos-override.yaml  os_sensor_cloud_image_params.yaml  os_sensor_os_cloud_params.yaml  parameters.yaml  viz-reliable.rviz  viz.rviz
ouster-ros/include/ouster_ros/: color_point.h  common_point_types.h  diagnostics_visitor_registry.h  os_client_base_node.h  os_point.h  os_processing_node_base.h  os_ros.h  os_sensor_node_base.h  ouster_lidar_ros_msgs.h  ring_buffer.h  sensor_diagnostics_tracker.h  sensor_diagnostics_tracker.hpp  sensor_point_types.h  visibility_control.h
ouster-ros/include/ouster_ros/impl/: file_util.h
ouster-ros/launch/: driver.launch.py  driver_launch.py  ouster.launch.py  record.composite.launch.xml  record.independent.launch.xml  record.launch.xml  replay.composite.launch.xml  replay.independent.launch.xml  replay.launch.xml  replay_pcap.launch.xml  rviz.launch.py  rviz.launch.xml  sensor.composite.common.launch  sensor.composite.launch.py  sensor.composite.launch.xml  sensor.independent.launch.py  sensor.independent.launch.xml  sensor.launch  sensor.launch.xml  sensor.rviz.launch.py  sensor.separate.launch.py  sensor_mtp.launch  sensor_mtp.launch.xml
ouster-ros/ouster-sdk/ouster_client/include/ouster/: chanfield.h  image_processing.h
ouster-ros/ouster-sdk/ouster_client/src/: image_processing.cpp  lidar_scan.cpp
ouster-ros/src/: image_processor.h  imu_packet_handler.h  laser_scan_processor.h  lidar_packet_handler.h  lock_free_ring_buffer.h  msg_analyzers.cpp  msg_analyzers.h  new_parsing.h  os_client_base_node.cpp  os_cloud_node.cpp  os_driver_node.cpp  os_image_node.cpp  os_pcap_node.cpp  os_pinhole_node.cpp  os_processing_node_base.cpp  os_replay_node.cpp  os_ros.cpp  os_sensor_node.cpp  os_sensor_node.h  os_sensor_node_base.cpp  os_static_transforms_broadcaster.h  ouster_lidar_ros_msgs.cpp  pcl_cloud_compose.h  pinhole_processor.h  point_cloud_compose.h  point_cloud_processor.h  point_cloud_processor_factory.h  point_meta_helpers.h  point_transform.h  sensor_diagnostics_tracker.cpp  sparse_neighbor_culling_filter.h  telemetry_handler.h  thread_safe_ring_buffer.h
ouster-ros/src/impl/: cartesian.h  file_util.cpp
ouster-ros/test/: lock_free_ring_buffer_test.cpp  point_accessor_test.cpp  point_cloud_compose_test.cpp  point_transform_test.cpp  ring_buffer_test.cpp  test_main.cpp  test_msg_analyzers.cpp  test_sensor_diagnostics_tracker.cpp
ouster-ros/util/: network-configure.bash
ouster-sensor-msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ouster-sensor-msgs/msg/: Telemetry.msg
ouster-srvs/: CMakeLists.txt  package.xml
src/: bag_converter.cpp  image_processor.h  imu_model.h  imu_packet_handler.h  laser_scan_processor.h  lidar_packet_handler.h  lidar_scan_to_point_cloud.cpp  lock_free_ring_buffer.h  os_client_base_nodelet.cpp  os_cloud_nodelet.cpp  os_driver_nodelet.cpp  os_image_nodelet.cpp  os_pcap_nodelet.cpp  os_replay_nodelet.cpp  os_ros.cpp  os_sensor_nodelet.cpp  os_sensor_nodelet.h  os_sensor_nodelet_base.cpp  os_transforms_broadcaster.h  point_cloud_compose.h  point_cloud_processor.h  point_cloud_processor_factory.h  point_meta_helpers.h  point_transform.h  telemetry_handler.h  thread_safe_ring_buffer.h
src/impl/: cartesian.h  file_util.cpp  rgb_profile.cpp  rgb_profile.h
tests/: lidar_scan_to_point_cloud_test.cpp  point_accessor_test.cpp  point_cloud_compose_test.cpp  point_transform_test.cpp  ring_buffer_test.cpp
util/: network-configure.bash
