<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouster_ros</name>
  <version>0.12.4</version>
  <description>Ouster ROS2 driver</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license file="LICENSE">BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>ouster_sensor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>std_srvs</depend>

  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>libtins-dev</build_depend>
  <build_depend>spdlog</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>curl</exec_depend>
  <exec_depend>spdlog</exec_depend>
  <exec_depend>libtins-dev</exec_depend>

  <test_depend>gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
