<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouster_ros</name>
  <version>0.15.0</version>
  <description>Ouster ROS2 driver</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license file="LICENSE">BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>class_loader</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>ouster_sensor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>libopencv-dev</depend>
  <depend>curl</depend>
  <depend>spdlog</depend>
  <depend>libjsoncpp-dev</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libtins-dev</build_depend>
  <build_depend>libzip-dev</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
